solved the whitespace issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -184,6 +184,10 @@ pre{
 
 }
 
+.content-text{
+  white-space: pre-wrap;
+}
+
 /*
 research display: block and display : inline;
 */
